--- a/arch/arm64/configs/merge_hi6250_defconfig
+++ b/arch/arm64/configs/merge_hi6250_defconfig
@@ -5409,12 +5409,12 @@ CONFIG_HUAWEI_HIDESYMS=y
 # CONFIG_HUAWEI_DOUBLE_FREE_CHECK_DEBUGFS is not set
 # CONFIG_HUAWEI_HARDEN_DOUBLE_FREE_CHECK_DEBUGFS is not set
 # CONFIG_HUAWEI_FREELIST_RANDOM_DEBUGFS is not set
-CONFIG_HUAWEI_PROC_CHECK_ROOT=y
+# CONFIG_HUAWEI_PROC_CHECK_ROOT is not set
 
 #
 # Huawei root scanner
 #
-CONFIG_HW_ROOT_SCAN=y
+# CONFIG_HW_ROOT_SCAN is not set
 # CONFIG_HW_ROOT_SCAN_ENG_DEBUG is not set
 # CONFIG_HUAWEI_EIMA is not set
 # CONFIG_HW_DOUBLE_FREE_DYNAMIC_CHECK is not set
