hi6250: Load the ramdisk in kernel
* Bootloader doesn't load it even if it's present
  so let's do it ourself

Change-Id: I1b1bfd0d822e4f6729be5cb954cc3e39c283d4b8

--- a/init/Kconfig
+++ b/init/Kconfig
@@ -2465,3 +2465,4 @@ source "kernel/hwcfs/Kconfig"
 source "net/network_aware/Kconfig"
 source "kernel/cpu_netlink/Kconfig"
 source "kernel/sched/Kconfig"
+source "init/sar_ramdisk/Kconfig"
