defconfig: disable DUBAI
Signed-off-by: DarkJoker360 <simoespo159@gmail.com>
Change-Id: Icb0661dd1264603874be9b5dfd44690fb7e4a882

--- a/arch/arm64/configs/merge_hi6250_defconfig
+++ b/arch/arm64/configs/merge_hi6250_defconfig
@@ -4846,7 +4846,7 @@ CONFIG_HUAWEI_TP_KIT_COLOR_INFO=y
 #
 # Huawei Device Usage Big-data Analytics Initiative Support
 #
-CONFIG_HUAWEI_DUBAI=y
+# CONFIG_HUAWEI_DUBAI is not set
 CONFIG_HW_CPULOAD_NOTI=y
 CONFIG_HW_MEMORY_MONITOR=y
 CONFIG_HUAWEI_CFI_TAG=0x0035c000
