[DNM] hi6250: disable -Werror
Change-Id: I1eb41f29d771ed6f03c878e8aa01455be81be045

--- a/drivers/hisi/hi64xx/Makefile
+++ b/drivers/hisi/hi64xx/Makefile
@@ -1,4 +1,4 @@
-subdir-ccflags-y += -Wall -Werror
+subdir-ccflags-y += -Wall 
 
 EXTRA_CFLAGS += -Idrivers/hisi/hi64xx_dsp/
 EXTRA_CFLAGS += -Idrivers/hisi/soundtrigger/
