--- a/drivers/hisi/isp/Makefile
+++ b/drivers/hisi/isp/Makefile
@@ -20,7 +20,7 @@ obj-$(CONFIG_HISI_HISTAR_ISP) += hisp_rpm.o nonsec.o sec.o \
                                 sensor.o isp.o
 
 ifeq ($(CONFIG_HISI_HISTAR_ISP), y)
-subdir-ccflags-y += -Wall -Werror
+subdir-ccflags-y += -Wall 
 subdir-ccflags-y += -I$(srctree)/drivers/hisi/tzdriver \
                     -I$(srctree)/drivers/hisi/load_image \
                     -I$(srctree)/drivers/media/huawei/camera \
