--- a/drivers/hisi/modem/drv/modem_avs/Makefile
+++ b/drivers/hisi/modem/drv/modem_avs/Makefile
@@ -6,7 +6,7 @@
 
 obj-y	+= avs_balong.o
 
-subdir-ccflags-y := -Werror
+subdir-ccflags-y := 
 
 ifeq ($(strip $(llt_gcov)),y)
 GCOV_PROFILE_avs_balong.o := y
