--- a/drivers/huawei_platform/vendor_exception/Makefile
+++ b/drivers/huawei_platform/vendor_exception/Makefile
@@ -2,6 +2,6 @@
 # Makefile for vendor_exception
 #
 
-ccflags-y += -Wall -Werror
+ccflags-y += -Wall 
 
 obj-$(CONFIG_HUAWEI_VENDOR_EXCEPTION) += vendor_exception.o
