--- a/drivers/hisi/axi/Makefile
+++ b/drivers/hisi/axi/Makefile
@@ -1,6 +1,6 @@
 #
 # Makefile for Hisilicon HI3635FPGA line
 #
-subdir-ccflags-y              += -Wall -Werror
+subdir-ccflags-y              += -Wall 
 obj-$(CONFIG_HISI_AXI)		+= hisi_axi.o
 
