--- a/drivers/hisi/bl31_log/Makefile
+++ b/drivers/hisi/bl31_log/Makefile
@@ -1,2 +1,2 @@
-subdir-ccflags-y                       += -Wall -Werror
+subdir-ccflags-y                       += -Wall 
 obj-$(CONFIG_HISI_KERNEL_BL31_LOG)     += bl31_log.o
