--- a/drivers/hisi/hifi_mailbox/Makefile
+++ b/drivers/hisi/hifi_mailbox/Makefile
@@ -1,4 +1,4 @@
-subdir-ccflags-y += -Wall -Werror
+subdir-ccflags-y += -Wall 
 
 obj-$(CONFIG_HIFI_MAILBOX)	+= mailbox/
 obj-$(CONFIG_HIFI_IPC) 		  += ipcm/
