--- a/drivers/hisi/kernel_harden_test/Makefile
+++ b/drivers/hisi/kernel_harden_test/Makefile
@@ -1,2 +1,2 @@
-subdir-ccflags-y                       += -Wall -Werror
+subdir-ccflags-y                       += -Wall 
 obj-$(CONFIG_HISI_KERNEL_HARDEN_DEBUG) += kernel_harden_test.o
