--- a/drivers/hisi/modem/drv/mem/Makefile
+++ b/drivers/hisi/modem/drv/mem/Makefile
@@ -6,4 +6,4 @@ endif
 obj-$(CONFIG_MEM_BALONG) 	+= mem_balong.o
 obj-$(CONFIG_ENABLE_TEST_CODE) += mem_balong_test.o
 
-subdir-ccflags-y := -Werror
+subdir-ccflags-y := 
