--- a/drivers/hisi/modem/drv/sec_call/Makefile
+++ b/drivers/hisi/modem/drv/sec_call/Makefile
@@ -5,4 +5,4 @@ endif
 obj-$(CONFIG_SEC_CALL) += sec_call.o
 EXTRA_CFLAGS += -Idrivers/hisi/tzdriver
 
-subdir-ccflags-y := -Werror
+subdir-ccflags-y := 
