--- a/arch/arm64/configs/merge_hi6250_defconfig
+++ b/arch/arm64/configs/merge_hi6250_defconfig
@@ -4904,9 +4904,9 @@ CONFIG_HUAWEI_STORAGE_ROFA=y
 CONFIG_HUAWEI_STORAGE_ROCHK=y
 CONFIG_HUAWEI_DYNAMIC_BRD=y
 CONFIG_HUAWEI_STORAGE_ROW=y
-CONFIG_OASES=y
-CONFIG_OASES_SIGNATURE_SUPPORT=y
-CONFIG_OASES_STATIC_PLTS=y
+# CONFIG_OASES is not set
+# CONFIG_OASES_SIGNATURE_SUPPORT is not set
+# CONFIG_OASES_STATIC_PLTS is not set
 
 #
 # Firmware Drivers
