--- a/arch/arm64/configs/merge_hi6250_defconfig
+++ b/arch/arm64/configs/merge_hi6250_defconfig
@@ -572,7 +572,7 @@ CONFIG_RANDOMIZE_MODULE_REGION_FULL=y
 #
 # Boot options
 #
-CONFIG_CMDLINE="console=ttyAMA0 androidboot.android_dt_dir=/disabledtfstab"
+CONFIG_CMDLINE="androidboot.android_dt_dir=/disabledtfstab"
 CONFIG_CMDLINE_FROM_BOOTLOADER=y
 CONFIG_CMDLINE_EXTEND=y
 # CONFIG_CMDLINE_FORCE is not set
