--- a/arch/arm64/configs/merge_hi6250_defconfig
+++ b/arch/arm64/configs/merge_hi6250_defconfig
@@ -382,7 +382,7 @@ CONFIG_HW_VIP_THREAD=y
 CONFIG_HW_NETWORK_AWARE=y
 # CONFIG_HW_IAWARE_THREAD_BOOST is not set
 CONFIG_SCHED_HISI_FORCE_CMP_BACKUP=y
-CONFIG_HW_QOS_THREAD=y
+# CONFIG_HW_QOS_THREAD is not set
 CONFIG_FREEZER=y
 CONFIG_HAVE_LIVEPATCH=y
 
