defconfig: drop touch firmware of EMUI 5 devices
Change-Id: If1fa3a154bc312eb79c1df1b6bac4ab7715714de

--- a/arch/arm64/configs/merge_hi6250_defconfig
+++ b/arch/arm64/configs/merge_hi6250_defconfig
@@ -4652,8 +4652,8 @@ CONFIG_HUAWEI_TP_COLOR_INFO=y
 # CONFIG_EVA_TOUCH_FW is not set
 # CONFIG_NEXT_TOUCH_FW is not set
 # CONFIG_KNIGHT_TOUCH_FW is not set
-CONFIG_NEMO_TOUCH_FW=y
-CONFIG_VENUS_TOUCH_FW=y
+# CONFIG_NEMO_TOUCH_FW is not set
+# CONFIG_VENUS_TOUCH_FW is not set
 # CONFIG_FRD_TOUCH_FW is not set
 # CONFIG_EDISON_TOUCH_FW is not set
 # CONFIG_BTV_TOUCH_FW is not set
