--- a/arch/arm64/configs/merge_hi6250_defconfig
+++ b/arch/arm64/configs/merge_hi6250_defconfig
@@ -4448,9 +4448,9 @@ CONFIG_HISI_TIMEKEEPER=y
 #
 # Hisi lowmem killer
 #
-CONFIG_HISI_LOWMEM=y
-CONFIG_HISI_LOWMEM_DBG=y
-CONFIG_HISI_MULTI_KILL=y
+# CONFIG_HISI_LOWMEM is not set
+# CONFIG_HISI_LOWMEM_DBG is not set
+# CONFIG_HISI_MULTI_KILL is not set
 # CONFIG_HISI_GETSPINLOCK_TEST is not set
 # CONFIG_HISI_HHEE is not set
 # CONFIG_HISI_ICS_IPU_PLATFORM is not set
