--- a/arch/arm64/Makefile
+++ b/arch/arm64/Makefile
@@ -148,12 +148,8 @@ Image.%: Image
 zinstall install:
 	$(Q)$(MAKE) $(build)=$(boot) $@
 
-%.dtb: scripts
-	$(Q)$(MAKE) $(build)=$(boot)/dts/auto-generate/config $(boot)/dts/auto-generate/$@
-
-dtbs: scripts
-	$(Q)$(MAKE) $(build)=$(boot)/dts/auto-generate/config dtbs
-	$(Q)$(MAKE) $(build)=$(boot)/dts/auto-generate/overlay dtbs
+dtbs: prepare scripts
+	$(Q)$(MAKE) $(build)=$(boot)/dts
 
 Image-dtb Image.gz-dtb: vmlinux scripts dtbs
 	$(Q)$(MAKE) $(build)=$(boot) $(boot)/$@
