--- a/arch/arm64/configs/merge_hi6250_defconfig
+++ b/arch/arm64/configs/merge_hi6250_defconfig
@@ -262,11 +262,11 @@ CONFIG_GCC_PLUGINS=y
 # CONFIG_GCC_PLUGIN_CYC_COMPLEXITY is not set
 # CONFIG_GCC_PLUGIN_LATENT_ENTROPY is not set
 CONFIG_HAVE_CC_STACKPROTECTOR=y
-CONFIG_CC_STACKPROTECTOR=y
+CONFIG_CC_STACKPROTECTOR=n
 # CONFIG_CC_STACKPROTECTOR_NONE is not set
 # CONFIG_CC_STACKPROTECTOR_REGULAR is not set
-CONFIG_CC_STACKPROTECTOR_STRONG=y
-CONFIG_ARCH_SUPPORTS_LTO_CLANG=y
+# CONFIG_CC_STACKPROTECTOR_STRONG=y
+# CONFIG_ARCH_SUPPORTS_LTO_CLANG=y
 # CONFIG_LTO_CLANG is not set
 CONFIG_HAVE_CONTEXT_TRACKING=y
 CONFIG_HAVE_VIRT_CPU_ACCOUNTING_GEN=y
